<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_a_us_city"
        android:inputType="textCapSentences" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search" />

    <TextView
        android:id="@+id/textView_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/city"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature" />

    <TextView
        android:id="@+id/textView_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description" />

    <ImageView
        android:id="@+id/imageView_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/icons" />

    <TextView
        android:id="@+id/textView_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:visibility="gone" />
</LinearLayout>